--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
         </div>
         <section id="hero">
             <div class="hero-left">
-                <h3 class="pre-title">My name is</h3>
-                <h1 class="hero-none">Desi Ayu <span>Safitri</span></h1>
+                <h3 class="pre-title">My Name Is</h3>
+                <h1 class="hero-name">Desi Ayu <span>Safitri</span></h1>
                 <p>
                     Creative front-end developer with nore than +5 years of experience
                     in enterprise coipaines and startups. Proficientin Javascript and
-                    react.Passionate about UI/UX.
+                    react. Passionate about UI/UX.
                 </p>
             </div>
             <div class="hero-right">
@@ -238,8 +238,8 @@
                        <h4 class="education-years">2019 - 2023</h4>
                     </div>
                 </div>
-           </div>
-           <div class="skills-rigt">
+           
+           <div class="skills-right">
             <p>
                 For 5+ years, I have been continuously learning in the field of
                 front-end and experimenting with new technologies and frameworks,
@@ -247,7 +247,7 @@
                 end experimenting with new technologies.
             </p>
 
-            <div class="skils-list">
+            <div class="skills-list">
                 <ul>
                     <li>React JS</li>
                     <li>Node JS</li>
